<resources>
    <string name="app_name">Videoteca</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="i_don_t_have_already_an_account">I don\'t already have an account</string>
    <string name="email">Email</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favorites">favorites</string>
    <string name="user_area">User Area</string>
    <string name="watchlist">Watchlist</string>
    <string name="search">Search</string>
    <string name="settings">App Settings</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="logout">Logout</string>
    <string name="recover_your_password">Recover your password</string>
    <string name="recover_password">Recover password</string>
    <string name="preferred_genres">Preferred genres</string>
    <string name="movies_rented">Movies rented</string>
    <string name="movies_reserved">Movies reserved</string>
    <string name="good_evening">Good evening</string>
    <string name="good_afternoon">Good afternoon</string>
    <string name="good_morning">Good morning</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="upcomming_movies">Upcomming Movies</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="good_night">Good night</string>
    <string name="details">Details</string>
    <string name="rent">Rent</string>
    <string name="summary">Summary</string>
    <string name="actors">Cast</string>
    <string name="recommended_films">Recommended movies</string>
    <string name="genres">Genres</string>
    <string name="this_content_is_currently_not_available_for_rental">This content is currently not available for rental</string>
    <string name="movie_removed_from_favorites">Movie removed from favorites</string>
    <string name="movie_added_to_favorites">Movie added to favorites</string>
    <string name="movie_removed_from_the_watchlist">Movie removed from the watchlist</string>
    <string name="movie_added_to_the_watchlist">Movie added to the watchlist</string>
    <string name="expires_on">"Expires on: "</string>
    <string name="you_have_already_rented_this_movie">You have already rented this movie.</string>
    <string name="euro_sim">€</string>
    <string name="_00_00">00.00</string>
    <string name="price">Price:</string>
    <string name="confirm_purchase">Confirm purchase</string>
    <string name="cancel">Cancel</string>
    <string name="purchase">Purchase</string>
    <string name="the_movie_will_be_available_in_your_rented_catalog_for_7_days_from_when_you_press_the_confirm_button">The movie will be available in your rented catalog for 7 days from when you press the confirm button!</string>
    <string name="movie_rented_successfully_you_can_find_it_in_your_rented_movies_catalog">Movie rented successfully. You can find it in your rented movies catalog.</string>
    <string name="select_audio_track">Select audio track</string>
    <string name="select_subtitles_track">Select subtitles track</string>
    <string name="select_audio_and_subtitles">Select Audio and Subtitles</string>
    <string name="conferma">Confirm</string>
    <string name="annulla">Cancel</string>
    <string name="rented_movies">Rented movies</string>
    <string name="favorite_genres">Favorite genres</string>
    <string name="confirme_changes">Confirme changes</string>
    <string name="select_your_favorite_genres">Select your favorite genres</string>
    <string name="continue_btn">"Continue "</string>
    <string name="no_movies_have_been_added_to_the_watchlist_yet">No movies have been added to the watchlist yet.</string>
    <string name="no_favorite_movies_have_been_selected_yet">No favorite movies have been selected yet.</string>
    <string name="there_are_currently_no_rented_movies">There are currently no rented movies.</string>
    <string name="no_email_has_been_entered">No email has been entered</string>
    <string name="send_password_reset_e_mail_send_with_success">Send password reset e-mail with success</string>
    <string name="failed_to_send_password_reset_e_mail">Failed to send password reset e-mail, retry</string>
</resources>