<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RentConfirmActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarConfirmRent"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorOnSurface"
        android:backgroundTint="?attr/colorOnSurface"
        android:minHeight="?attr/actionBarSize"
        android:paddingLeft="24dp"
        android:paddingTop="30dp"
        android:paddingRight="24dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/confirm_purchase"
        app:titleTextColor="?attr/colorPrimary" />

    <ImageView
        android:id="@+id/iv_backdrop_conf"
        android:layout_width="411dp"
        android:layout_height="255dp"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toTopOf="@+id/iv_poster_rented_conf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarConfirmRent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/iv_poster_rented_conf"
        android:layout_width="102.45dp"
        android:layout_height="153.68dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/background_search"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_image_not_supported" />

    <TextView
        android:id="@+id/tv_title_rent_conf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="Title"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_or_title_conf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/iv_poster_rented_conf"
        app:layout_constraintTop_toTopOf="@+id/iv_poster_rented_conf"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_or_title_conf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:text="Orginal Title"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toTopOf="@+id/tv_date_conf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/iv_poster_rented_conf" />

    <TextView
        android:id="@+id/tv_date_conf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        android:text="date"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/iv_poster_rented_conf" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="188dp"
        android:text="@string/purchase"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/price"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/_00_00"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/euro_sim"
        app:layout_constraintBottom_toBottomOf="@+id/iv_poster_rented_conf"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/full_hd_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:drawableLeftCompat="@drawable/ic_full_hd"
        app:layout_constraintBottom_toBottomOf="@+id/iv_poster_rented_conf"
        app:layout_constraintStart_toEndOf="@+id/iv_poster_rented_conf" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:drawablePadding="8dp"
        android:text="@string/the_movie_will_be_available_in_your_rented_catalog_for_7_days_from_when_you_press_the_confirm_button"
        android:textAlignment="center"
        android:textColor="@color/red_A700"
        android:textStyle="bold"
        app:drawableLeftCompat="@drawable/ic_error_outline"
        app:layout_constraintBottom_toTopOf="@+id/btn_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>