<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserAreaFragment"
    android:background="?attr/colorSecondaryVariant">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="414dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_currentuser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:clickable="false"
            android:lineSpacingExtra="8sp"
            android:padding="30dp"
            android:paddingLeft="24dp"
            android:paddingTop="24dp"
            android:paddingRight="24dp"
            android:paddingBottom="12dp"
            android:text="TextView"
            android:textAlignment="textStart"
            android:textColor="?attr/colorPrimary"
            android:textSize="20sp" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/tv_settings_ua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_effect"
            android:drawableLeft="@drawable/ic_settings"
            android:drawablePadding="12dp"
            android:hapticFeedbackEnabled="false"
            android:padding="24dp"
            android:paddingLeft="24dp"
            android:paddingTop="12dp"
            android:paddingRight="24dp"
            android:paddingBottom="12dp"
            android:text="@string/settings"
            android:textAlignment="textStart"
            android:textColor="?attr/colorPrimary"
            android:textSize="20sp" />

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/tv_genres_fav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_effect"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_favorite_border"
            android:drawablePadding="12dp"
            android:hapticFeedbackEnabled="false"
            android:padding="24dp"
            android:paddingLeft="24dp"
            android:paddingTop="12dp"
            android:paddingRight="24dp"
            android:paddingBottom="12dp"
            android:text="@string/preferred_genres"
            android:textAlignment="textStart"
            android:textColor="?attr/colorPrimary"
            android:textSize="20sp" />

        <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/tv_rented"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_effect"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_video_library"
            android:drawablePadding="12dp"
            android:hapticFeedbackEnabled="false"
            android:padding="24dp"
            android:paddingLeft="24dp"
            android:paddingTop="12dp"
            android:paddingRight="24dp"
            android:paddingBottom="12dp"
            android:text="@string/movies_rented"
            android:textAlignment="textStart"
            android:textColor="?attr/colorPrimary"
            android:textSize="20sp" />

        <View
            android:id="@+id/divider6"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:padding="24dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp" />

        <TextView
            android:id="@+id/tv_reserved"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_effect"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_movie_full"
            android:drawablePadding="12dp"
            android:hapticFeedbackEnabled="false"
            android:padding="24dp"
            android:paddingLeft="24dp"
            android:paddingTop="12dp"
            android:paddingRight="24dp"
            android:paddingBottom="12dp"
            android:text="@string/movies_reserved"

            android:textAlignment="textStart"
            android:textColor="?attr/colorPrimary"
            android:textSize="20sp" />

        <View
            android:id="@+id/divider7"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/tv_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_effect"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_logout"
            android:drawablePadding="12dp"
            android:hapticFeedbackEnabled="false"
            android:padding="24dp"
            android:paddingLeft="24dp"
            android:paddingTop="12dp"
            android:paddingRight="24dp"
            android:paddingBottom="12dp"
            android:text="Logout"
            android:textAlignment="textStart"
            android:textColor="?attr/colorPrimary"
            android:textSize="20sp" />

        <View
            android:id="@+id/divider8"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>